<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_1"
        tools:context=".MainFragment">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topguidline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".20" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middleguidline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".60" />

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruchi_hotel"
            android:textColor="@color/white"
            android:layout_marginStart="12dp"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/middleguidline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topguidline" />

    <Button
            android:id="@+id/nonveg_btn"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/circle"
            android:text="@string/non_veg"
            android:textAllCaps="false"
            android:textSize="20dp"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintTop_toBottomOf="@+id/middleguidline" />

    <Button
            android:id="@+id/veg_btn"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/circle"
            android:text="@string/veg_veg"
            android:textAllCaps="false"
            android:textSize="20dp"
            app:layout_constraintEnd_toStartOf="@+id/one"
            app:layout_constraintTop_toBottomOf="@+id/middleguidline" />

    <Button
            android:id="@+id/snacks_btn"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/circle"
            android:text="@string/snacks"
            android:textAllCaps="false"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintTop_toBottomOf="@+id/middleguidline" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".30" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".70" />

</androidx.constraintlayout.widget.ConstraintLayout>