<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderConfirmFragment">


    <TextView
            android:id="@+id/orderdetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="order details"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="20dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="12dp"
            android:text="@string/thanks_for_ordering_from_ruchi_s_resto"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderdetails" />

    <TextView
            android:id="@+id/visit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="12dp"
            android:text="@string/visit_again"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
            android:id="@+id/showorders"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/show_orders"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit" />


</androidx.constraintlayout.widget.ConstraintLayout>